--- a/paint.css
+++ b/paint.css
@@ -21,3 +21,32 @@ ul {
   li input:hover {
     background-color: rgb(255, 250, 250);
   }
+  .btn{
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    }
+    .btn-no {
+    color: rgb(0, 0, 0);
+    }
+    .btn-yes {
+    color: #fff;
+    background-color: #89eaa1;
+    border-color: #c0ffd3;
+    }
