--- a/paint.css
+++ b/paint.css
@@ -43,10 +43,15 @@ ul {
     border-radius: 4px;
     }
     .btn-no {
-    color: rgb(0, 0, 0);
+      color: rgb(0, 0, 0);
     }
     .btn-yes {
-    color: #fff;
-    background-color: #89eaa1;
-    border-color: #c0ffd3;
+      color: #fff;
+      background-color: #89eaa1;
+      border-color: #c0ffd3;
+    }
+    canvas {
+      border: 1px solid #000;
+      margin-left: auto;
+      margin-right: auto;
     }
